--- a/FilRouge2/MVVM/Views/ListOffresPage.xaml
+++ b/FilRouge2/MVVM/Views/ListOffresPage.xaml
@@ -29,7 +29,7 @@
             <TextBlock Grid.Column="0" Grid.Row="0" x:Uid="TitleLabel" VerticalAlignment="Center" FontSize="13" Style="{StaticResource BaseTextBlockStyle}" Text="Titre"/>
             <TextBlock Grid.Column="1" Grid.Row="0" x:Uid="DateLabel" VerticalAlignment="Center" FontSize="13" Style="{StaticResource BaseTextBlockStyle}" Text="Date de publication"/>
         </Grid>
-        <ListView Name="ListOffres" Grid.Row="1" ItemsSource="{Binding ListOffres}" SelectedItem="{Binding SelectedOffre, Mode=TwoWay}">
+        <ListView Name="ListOffres" Grid.Row="1" ItemsSource="{Binding ListOffres}" SelectedItem="{Binding SelectedOffre, Mode=TwoWay}" SelectionChanged="ListOffres_SelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid BorderBrush="Black" BorderThickness="1">
@@ -92,11 +92,11 @@
                 <ColumnDefinition x:Name="DisplayOffreColumn"/>
                 <ColumnDefinition x:Name="GoBackColumn"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Uid="DisplayOffreButton" Margin="4">
+            <Button Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Uid="DisplayOffreButton" Margin="4" Click="Button_Click">
                 <TextBlock x:Uid="DisplayOffreButtonLabel" Style="{StaticResource BaseTextBlockStyle}" Text="Voir l'offre"/>
             </Button>
             <Button Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Uid="DisplayOffreButton" Margin="4">
-                <TextBlock x:Uid="GoBackButtonLabel" Style="{StaticResource BaseTextBlockStyle}" Text="Retour"/>
+                <TextBlock x:Uid="GoBackButtonLabel" Style="{StaticResource BaseTextBlockStyle}" Text="Retour" Height="19" VerticalAlignment="Top"/>
             </Button>
         </Grid>
     </Grid>
