--- a/FilRouge2/MVVM/Views/ListOffresPage.xaml
+++ b/FilRouge2/MVVM/Views/ListOffresPage.xaml
@@ -8,10 +8,10 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Loaded="Page_Loaded">
 
-    <!--<Page.Resources>
+    <Page.Resources>
         <local:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
         <local:StringToHyperLinkConverter x:Key="StringToHyperlinkConverter"/>
-    </Page.Resources>-->
+    </Page.Resources>
 
     <Grid Name="MainGrid"
        HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="12,12,12,12">
@@ -95,7 +95,7 @@
             <Button Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Uid="DisplayOffreButton" Margin="4" Click="Button_Click">
                 <TextBlock x:Uid="DisplayOffreButtonLabel" Style="{StaticResource BaseTextBlockStyle}" Text="Voir l'offre"/>
             </Button>
-            <Button Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Uid="DisplayOffreButton" Margin="4">
+            <Button Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Uid="DisplayOffreButton" Margin="4" Click="Button_Click_1">
                 <TextBlock x:Uid="GoBackButtonLabel" Style="{StaticResource BaseTextBlockStyle}" Text="Retour" Height="19" VerticalAlignment="Top"/>
             </Button>
         </Grid>
