--- a/FilRouge2/MVVM/Views/OffrePage.xaml
+++ b/FilRouge2/MVVM/Views/OffrePage.xaml
@@ -8,10 +8,10 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <!--<Page.Resources>
+    <Page.Resources>
         <local:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
         <local:StringToHyperLinkConverter x:Key="StringToHyperLinkConverter"/>
-    </Page.Resources>-->
+    </Page.Resources>
 
     <Grid Name="OffrePreviewGrid" Margin="12,12,12,12">
         <Grid.RowDefinitions>
